# FraudEmblem

./: CMakeLists.txt  Dialog.hpp  LevelManager.hpp  LevelSample.hpp  README.md  battle.cpp  main.cpp  path.cpp
Inferdum/: .clang-format  CMakeLists.txt
Inferdum/include/Kat/: EasyDear.hpp  State.h  batch.h  input.h  math.h  resource.h  sound.h  vector.h  window.h
Inferdum/src/: State.cpp  input.cpp  sound.cpp  window.cpp
Inferdum/src/components/: animator.cpp  sprite.cpp  texture.cpp
assets/: dialog_faces.png-autosave.kra  dialog_faces.png~
assets/characters/: assasin.json  boss.json  test.json
assets/scene/: battle_test.json  kek.json  menu.json
include/: Context.hpp  Dialog.hpp  Map.hpp  View.hpp  Window.hpp
include/component/: Button.hpp  Character.hpp  Equipment.hpp  Inventory.hpp  Play.hpp  Stats.hpp  Transform.hpp  battle.hpp
include/gui/: GUI.hpp  GuiHandler.hpp
include/gui/widget/: Button.hpp  Clickable.hpp  Colorable.hpp  Draggable.hpp  Focusable.hpp  Hoverable.hpp  Menu.hpp  MenuItem.hpp  Movable.hpp  Resizable.hpp  Rotatable.hpp  Scalable.hpp  Static.hpp  Widget.hpp
include/item/: Accessory.hpp  Equipable.hpp  Item.hpp  Stack.hpp  Weapon.hpp
include/state/: AState.hpp  BattleState.hpp  Machine.hpp  MenuState.hpp
src/: Context.cpp  Map.cpp  View.cpp  Window.cpp
src/component/: Button.cpp  Character.cpp  Equipment.cpp  Inventory.cpp  Stats.cpp  Transform.cpp
src/gui/: GUI.cpp  GuiHandler.cpp
src/item/: Accessory.cpp  Equipable.cpp  Item.cpp  Stack.cpp  Weapon.cpp
src/state/: BattleState.cpp  Machine.cpp  MenuState.cpp
(+17 files in other folders)
